src/tess/tl/test/fail/test_fail_const_value_reassign_inferred.tl
#module main

main() {
    x: Const := 5
    x = 10
    0
}
